@@ -1,0 +1,75 @@
+<?php  if ( ! defined('BASEPATH')) exit('No direct script access allowed');
+	$lang['list_add'] 				= 'Pridať';
+	$lang['list_actions'] 			= 'Akcie';
+	$lang['list_page'] 				= 'Strana';	
+	$lang['list_paging_of'] 		= 'z';
+	$lang['list_displaying']		= 'Zobrazujem od {start} do {end} z {results} záznamov';
+	$lang['list_filtered_from']		= '(vybrané z {total_results} všetkých záznamov)';
+	$lang['list_show_entries']		= 'Zobraziť {paging} riadkov';
+	$lang['list_no_items']			= 'Žiadne záznamy na zobrazenie';
+	$lang['list_zero_entries']		= 'Zobrazuje sa 0 až 0 z 0 záznamov';
+	$lang['list_search'] 			= 'Hľadať';	
+	$lang['list_search_all'] 		= 'Hľadať všetko';
+	$lang['list_clear_filtering'] 	= 'Vymazať filtre';
+	$lang['list_delete'] 			= 'Vymazať';
+	$lang['list_edit'] 				= 'Upraviť';	
+	$lang['list_paging_first'] 		= 'Prvý';
+	$lang['list_paging_previous'] 	= 'Predchádzajúci';
+	$lang['list_paging_next'] 		= 'Ďalší';
+	$lang['list_paging_last'] 		= 'Posledný';
+	$lang['list_loading'] 			= 'Načítavanie...';	
+
+	$lang['form_edit'] 				= 'Upraviť';
+	$lang['form_back_to_list'] 		= 'Späť na zoznam';
+	$lang['form_update_changes'] 	= 'Potvrdiť zmeny';
+	$lang['form_cancel'] 			= 'Zrušiť';	
+	$lang['form_update_loading'] 	= 'Nahrávanie, aktualizácia zmien...';
+	$lang['update_success_message'] = 'Vaše dáta boli úspešne aktualizované.';	
+	$lang['form_go_back_to_list'] 	= 'Vrátiť sa na zoznam';
+	
+	$lang['form_add'] 				= 'Pridať';
+	$lang['insert_success_message'] = 'Vaše dáta boli úspešne uložené do databázy.';
+	$lang['form_or']				= 'alebo';
+	$lang['form_save'] 				= 'Uložiť';
+	$lang['form_insert_loading'] 	= 'nahrávanie, ukladanie dát...';
+	
+	$lang['form_upload_a_file'] 	= 'Nahrať súbor';
+	$lang['form_upload_delete'] 	= 'vymazať';
+	$lang['form_button_clear'] 		= 'Vyčistiť';	
+	
+	$lang['delete_success_message'] = 'Vaše dáta boli úspešne zmazané z databázy.';
+	$lang['delete_error_message'] 	= 'Vaše dáta neboli zmazané z databázy.';
+	
+	/* Javascript messages */
+	$lang['alert_add_form']			= 'Vložené dáta nemusia byť uložené.\\nUrčite sa chcete vrátiť na zoznam?';
+	$lang['alert_edit_form']		= 'Zmeny nemusia byť uložené.\\nUrčite sa chcete vrátiť na zoznam?';
+	$lang['alert_delete']			= 'Určite chcete zmazať tento záznam?';
+	
+	$lang['insert_error']			= 'Chyba pri vkladaní.';
+	$lang['update_error']			= 'Chyba pri ukladaní.';
+	
+	/* Added in version 1.2.1 */
+	$lang['set_relation_title']		= 'Vybrať {field_display_as}';
+	$lang['list_record']			= 'Záznam';
+	$lang['form_inactive']			= 'neaktívny';
+	$lang['form_active']			= 'aktívny';
+	
+	/* Added in version 1.2.2 */
+	$lang['form_save_and_go_back']	= 'Uložiť a vrátiť sa na zoznam';
+	$lang['form_update_and_go_back']= 'Upraviť a vrátiť sa na zoznam';
+
+	/* Upload functionality */
+	$lang['string_delete_file'] 	= "Vymazávanie súboru";
+	$lang['string_progress'] 		= "Stav: ";
+	$lang['error_on_uploading'] 	= "Pri nahrávaní súboru nastala chyba.";
+	$lang['message_prompt_delete_file'] 	= "Ste si istý/á, že chcete vymazať tento súbor?";
+	
+	$lang['error_max_number_of_files'] 	= "Naraz môžete nahrať iba 1 súbor.";
+	$lang['error_accept_file_types'] 	= "Tento typ súboru nie je povolený.";
+	$lang['error_max_file_size'] 		= "Nahrávaný súbor prekročil povolenú veľkosť ({max_file_size})";
+	$lang['error_min_file_size'] 		= "Nie je možné nahrať prázdny súbor.";
+	
+	/* Added in version 1.3.1 */
+	$lang['list_export'] 	= "Export";
+	$lang['list_print'] 	= "Print";
+	$lang['minimize_maximize'] = 'Minimize/Maximize';	
