@@ -1,4 +1,5 @@
 v 1.3.3
+	Adding languages: Bengali, Slovak.
 	#102 - Unsigned field type bug.
 	#103 - Multiple columns search filtering at datatables.
 v 1.3.2
